# xpp

robots/xpp_arcdog/: CMakeLists.txt  package.xml
robots/xpp_arcdog/include/xpp_arcdog/: arcdogleg_inverse_kinematics.h  inverse_kinematics_arcdog.h  inverse_kinematics_mini_cheetah.h
robots/xpp_arcdog/launch/: arcdog.launch  arcdog_visualise.launch  demo_arcdog.launch  mini_cheetah.launch  mini_cheetah_visualise.launch  new_demo_arcdog.launch
robots/xpp_arcdog/meshes/leg/: arcdog_calf.dae  arcdog_hip.dae
robots/xpp_arcdog/rviz/: xpp_arcdog.rviz  xpp_cyberdog.rviz  xpp_mini_cheetah.rviz
robots/xpp_arcdog/src/: arcdogleg_inverse_kinematics.cc  inverse_kinematics_arcdog.cc  inverse_kinematics_mini_cheetah.cc
robots/xpp_arcdog/src/exe/: urdf_visualizer_arcdog.cc  urdf_visualizer_mini_cheetah.cc
robots/xpp_arcdog/urdf/: arcdog.urdf.xacro  mini_cheetah.urdf.xacro
robots/xpp_cyberdog/: CMakeLists.txt  package.xml
robots/xpp_cyberdog/include/xpp_cyberdog/: cyberdogleg_inverse_kinematics.h  inverse_kinematics_cyberdog.h
robots/xpp_cyberdog/launch/: cyberdog.launch
robots/xpp_cyberdog/src/: cyberdogleg_inverse_kinematics.cc  inverse_kinematics_cyberdog.cc
robots/xpp_cyberdog/src/exe/: urdf_visualizer_cyberdog.cc
robots/xpp_cyberdog/urdf/: cyberdog_description.urdf
robots/xpp_hyq/launch/: all.launch
xpp_examples/bags/: hyq.csv
xpp_examples/launch/: cyberdog_bag.launch  mini_cheetah_bag.launch
xpp_examples/rviz/: xpp_arcdog.rviz  xpp_mini_cheetah.rviz
